--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>建物測量與複丈費用計算系統</title>
+  <title>建物測量規費試算</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h2>建物測量與複丈費用計算系統</h2>
+    <h2>建物測量規費試算</h2>
     <form id="land-form">
       <div>
         <label for="district">行政區：</label>
