--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <div>
         <label for="land-number">地號：</label>
-        <input type="text" id="land-number" placeholder="請輸入8位數地號，例如：244-0要輸入02440000" maxlength="8" required>
+        <input type="text" id="land-number" placeholder="地號為8碼，如264-3為02640003" maxlength="8" required>
       </div>
 
       <div>
