--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         </select>
       </div>
 
+      <div id="dynamic-inputs"></div>
+
       <div>
         <label for="building-numbers">建號數：</label>
         <input type="number" id="building-numbers" placeholder="請輸入建號數" min="1" required>
