--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <h1>建物測量規費試算</h1> <!-- 新增標題 -->
     <form id="land-form">
       <div>
         <label for="district">行政區：</label>
