--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
 </head>
 <body>
   <div class="container">
-    <h1>建物測量規費試算</h1> <!-- 新增標題 -->
+    <h1>建物測量規費試算</h1>
     <form id="land-form">
-      <div>
+      <div class="form-group">
         <label for="district">行政區：</label>
         <select id="district" required>
           <option value="">請選擇行政區</option>
         </select>
       </div>
 
-      <div>
+      <div class="form-group">
         <label for="section">地段：</label>
         <select id="section" disabled required>
           <option value="">請先選擇行政區</option>
         </select>
       </div>
 
-      <div>
+      <div class="form-group">
         <label for="land-number">地號：</label>
         <input type="text" id="land-number" placeholder="地號為8碼，如264-3為02640003" required>
       </div>
 
-      <div>
+      <div class="form-group">
         <label for="case-type">案件類型：</label>
         <select id="case-type" required>
           <option value="">請選擇案件類型</option>
@@ -38,7 +38,7 @@
         </select>
       </div>
 
-      <div id="detail-field" style="display:none;">
+      <div class="form-group" id="detail-field" style="display:none;">
         <label for="detail-type">詳細項目：</label>
         <select id="detail-type" required>
           <option value="">請選擇詳細項目</option>
