--- a/index.html
+++ b/index.html
@@ -4,41 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>建物測量規費試算</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles1.css">
 </head>
 <body>
   <div class="container">
     <h1>建物測量規費試算</h1>
     <form id="land-form">
-      <div class="form-group">
-        <label for="district">行政區：</label>
-        <select id="district" required>
-          <option value="">請選擇行政區</option>
-        </select>
-      </div>
+      <label for="district">行政區：</label>
+      <select id="district" required>
+        <option value="">請選擇行政區</option>
+      </select>
 
-      <div class="form-group">
-        <label for="section">地段：</label>
-        <select id="section" disabled required>
-          <option value="">請先選擇行政區</option>
-        </select>
-      </div>
+      <label for="section">地段：</label>
+      <select id="section" disabled required>
+        <option value="">請先選擇行政區</option>
+      </select>
 
-      <div class="form-group">
-        <label for="land-number">地號：</label>
-        <input type="text" id="land-number" placeholder="地號為8碼，如264-3為02640003" required>
-      </div>
+      <label for="land-number">地號：</label>
+      <input type="text" id="land-number" placeholder="地號為8碼，如264-3為02640003" required>
 
-      <div class="form-group">
-        <label for="case-type">案件類型：</label>
-        <select id="case-type" required>
-          <option value="">請選擇案件類型</option>
-          <option value="建物第一次測量">建物第一次測量</option>
-          <option value="建物複丈">建物複丈</option>
-        </select>
-      </div>
+      <label for="case-type">案件類型：</label>
+      <select id="case-type" required>
+        <option value="">請選擇案件類型</option>
+        <option value="建物第一次測量">建物第一次測量</option>
+        <option value="建物複丈">建物複丈</option>
+      </select>
 
-      <div class="form-group" id="detail-field" style="display:none;">
+      <div id="detail-field" style="display:none;">
         <label for="detail-type">詳細項目：</label>
         <select id="detail-type" required>
           <option value="">請選擇詳細項目</option>
@@ -51,9 +43,10 @@
     </form>
 
     <div id="result" style="display:none;">
-      <h3>計算結果：</h3>
+      <h2>計算結果</h2>
       <p id="result-text"></p>
     </div>
+
   </div>
 
   <script src="script.js"></script>
